# hierarchical-revenue-forecast

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PROMPT.md  PROMPT_build.md  PROMPT_dashboard.md  PROMPT_fix.md  PROMPT_nextsteps.md  PROMPT_plan.md  PROMPT_production.md  PROMPT_redesign.md  README.md  ROADMAP.md  docker-compose.monitoring.yml  docker-compose.yml  loop.sh  progress.md  quality_gates.yaml
.github/workflows/: ci.yml
deploy/alertmanager/: alertmanager.yml
deploy/grafana/: mlrf-dashboard.json
deploy/kubernetes/: api-deployment.yaml  api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  redis-statefulset.yaml  secrets.yaml.template
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: DEPLOYMENT.md  MODEL_CARD.md  SETUP.md
docs/adr/: 001-polars-over-pandas.md  (+4 more)
mlrf-api/: Dockerfile  README.md  go.mod  go.sum
mlrf-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
mlrf-data/: pyproject.toml
mlrf-data/src/mlrf_data/: __init__.py  download.py  features.py  hierarchy.py  preprocess.py
mlrf-data/tests/: __init__.py  test_features.py  test_hierarchy.py  test_preprocess.py
mlrf-ml/: pyproject.toml
mlrf-ml/src/mlrf_ml/: __init__.py  __main__.py  explainability.py  export.py  reconciliation.py  train.py  validation.py
mlrf-ml/src/mlrf_ml/models/: __init__.py  lightgbm_model.py  statistical.py
mlrf-ml/tests/: __init__.py  test_explainability.py  test_export.py  test_lightgbm.py  test_reconciliation.py  test_validation.py
mlrf-shap/: .gitignore  Dockerfile  README.md  pyproject.toml
mlrf-shap/src/mlrf_shap/: __init__.py  server.py  service.py
mlrf-shap/tests/: __init__.py  test_server.py  test_service.py
models/: feature_importance.csv  lightgbm_model.txt
scripts/: generate_hierarchy_json.py  generate_verification_report.py  integration_tests.sh  run_full_pipeline.sh
specs/: 01-data-pipeline.md  02-ml-training.md  03-hierarchical-reconciliation.md  04-shap-explainability.md  05-go-api.md  06-dashboard.md  07-integration.md
(+93 files in other folders)
