[project]
name = "mlrf-data"
version = "0.1.0"
description = "Data processing pipeline for Multi-LOB Revenue Forecasting System"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "kaggle>=1.6.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlrf_data"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
