[project]
name = "mlrf-ml"
version = "0.1.0"
description = "ML training pipeline for Multi-LOB Revenue Forecasting System"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "statsforecast>=1.7.0",
    "hierarchicalforecast>=0.4.0",
    "shap>=0.45.0",
    "onnx>=1.16.0",
    "onnxmltools>=1.12.0",
    "skl2onnx>=1.16.0",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlrf_ml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
