[project]
name = "mlrf-shap"
version = "0.1.0"
description = "Real-time SHAP explanation service for MLRF"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mlrf-shap = "mlrf_shap.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
